Added broadcast intent containing messages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.accessibility">
+    package="com.whatsapp.integration">
 
     <uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.whatsapp.integration.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,7 @@
         </activity>
 
         <service
-            android:name=".MyAccessibilityService"
+            android:name="com.whatsapp.integration.MyAccessibilityService"
             android:description="@string/service_description"
             android:enabled="true"
             android:exported="true"
@@ -37,11 +37,11 @@
                 android:resource="@xml/accessibility" />
         </service>
         <service
-            android:name="com.example.accessibility.MessageService"
+            android:name="com.whatsapp.integration.MessageService"
             android:enabled="true" />
 
         <receiver
-            android:name=".BootReceiver"
+            android:name="com.whatsapp.integration.BootReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
