--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,52 @@ buildscript {
     }
 }
 
+ext {
+    applicationId = 'com.rubius.smartwatchlearning'
+
+    // versions
+    versionCode = 1
+    versionName = '1.0'
+
+    // build tools version
+    buildToolsVersion = '25.0.0'
+
+    // SDK versions
+    minSdkVersion = 17 // 4.2
+    targetSdkVersion = 22 // 5.1
+    compileSdkVersion = 25 // 7.1
+
+    // support library dependencies
+    versionSupportLibraries = '25.2.0'
+
+    if (!versionSupportLibraries.startsWith(compileSdkVersion.toString())) {
+        throw new GradleException("Support library major versions must match compile SDK version")
+    }
+
+    versionSupportAppcompatV7 = versionSupportLibraries
+    versionSupportDesign = versionSupportLibraries
+    versionSupportCardviewV7 = versionSupportLibraries
+    versionSupportAnnotations = versionSupportLibraries
+    versionSupportRecyclerView = versionSupportLibraries
+    versionSupportWearable = '1.4.0'
+    versionSupportTestRunner = '0.5'
+    versionSupportTestRules = '0.5'
+
+    // other dependencies
+    versionGmsPlayServicesWearable = '8.4.0'
+    versionGson = '2.7'
+
+    versionJUnit = '4.12'
+
+    versionOkHttp3 = '3.4.1'
+    versionHamcrest = '1.3'
+    versionRecyclerTabLayout = '1.1.0'
+    versionRetrolambda = '3.4.0'
+
+    versionDaggerCompiler = '2.6.1'
+    versionDagger = '2.6.1'
+}
+
 allprojects {
     repositories {
         jcenter()
