--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 }
 
 ext {
-    applicationId = 'com.rubius.smartwatchlearning'
+    applicationId = 'com.whatsapp.integration'
 
     // versions
     versionCode = 1
@@ -23,8 +23,8 @@ ext {
     buildToolsVersion = '25.0.0'
 
     // SDK versions
-    minSdkVersion = 17 // 4.2
-    targetSdkVersion = 22 // 5.1
+    minSdkVersion = 21 // 4.2
+    targetSdkVersion = 25 // 7.1
     compileSdkVersion = 25 // 7.1
 
     // support library dependencies
