--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.ext.versionSupportAppcompatV7"
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     testCompile "junit:junit:$rootProject.ext.versionJUnit"
+    compile project(path: ':androidshared:androidcommon')
 }
