--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.ext.versionSupportAppcompatV7"
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     testCompile "junit:junit:$rootProject.ext.versionJUnit"
+    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.versionDaggerCompiler"
+    compile "com.google.dagger:dagger:$rootProject.ext.versionDagger"
     compile project(path: ':androidshared:androidcommon')
 }
