--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "com.android.support:appcompat-v7:$rootProject.ext.versionSupportAppcompatV7"
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile "junit:junit:$rootProject.ext.versionJUnit"
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.versionDaggerCompiler"
     compile "com.google.dagger:dagger:$rootProject.ext.versionDagger"
