Updated gradle plugin to 3.0.0

--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -45,9 +46,10 @@ ext {
 
     // other dependencies
     versionGmsPlayServicesWearable = '8.4.0'
-    versionGson = '2.7'
+    versionGson = '2.8.0'
 
     versionJUnit = '4.12'
+    versionEspresso = '2.2.2'
 
     versionOkHttp3 = '3.4.1'
     versionHamcrest = '1.3'
