--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,8 @@ captures/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
-.idea/dictionaries
+.idea/modules.xml
+.idea/caches
 .idea/libraries
 
 # Keystore files
